sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:2: error: not found: value condition
condition = true
^AlgCocktailSort1:4: error: not found: value condition
  while(condition){
        ^AlgCocktailSort1:8: error: not found: value condition
        condition = false}
        ^AlgCocktailSort1:13: error: not found: value condition
      condition = false}
      ^